--- a/view/PastureWidget.ui
+++ b/view/PastureWidget.ui
@@ -77,7 +77,7 @@
        <height>664</height>
       </rect>
      </property>
-     <widget class="QTabWidget" name="tabWidget">
+     <widget class="QTabWidget" name="main_tab_widget">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -93,12 +93,12 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
       </property>
-      <widget class="QWidget" name="tab_2">
+      <widget class="QWidget" name="monitoring_tab">
        <attribute name="title">
         <string>Monitoring</string>
        </attribute>
@@ -1067,7 +1067,7 @@ font: 75 14pt &quot;Helvetica&quot;;</string>
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="pasture_tab">
+      <widget class="QWidget" name="app_tab">
        <attribute name="title">
         <string>Pasture(PUA)</string>
        </attribute>
@@ -1296,7 +1296,7 @@ font: 75 14pt &quot;Helvetica&quot;;</string>
           </rect>
          </property>
          <property name="text">
-          <string>Pasture Group</string>
+          <string>Person Group</string>
          </property>
         </widget>
         <widget class="QComboBox" name="pasture_group_cbox">
@@ -1502,7 +1502,7 @@ font: 75 14pt &quot;Helvetica&quot;;</string>
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="tab">
+      <widget class="QWidget" name="settings_tab">
        <attribute name="title">
         <string>Settings</string>
        </attribute>
@@ -1574,7 +1574,7 @@ font: 75 14pt &quot;Helvetica&quot;;</string>
  <tabstops>
   <tabstop>working_l1_cbox</tabstop>
   <tabstop>working_l2_cbox</tabstop>
-  <tabstop>tabWidget</tabstop>
+  <tabstop>main_tab_widget</tabstop>
   <tabstop>scrollArea</tabstop>
  </tabstops>
  <resources/>
