--- a/view/ApplicationsSpaDialog.ui
+++ b/view/ApplicationsSpaDialog.ui
@@ -63,7 +63,7 @@
     <string notr="true">QTabBar::tab { width: 150px; }</string>
    </property>
    <property name="currentIndex">
-    <number>3</number>
+    <number>1</number>
    </property>
    <property name="usesScrollButtons">
     <bool>true</bool>
@@ -400,7 +400,7 @@
      </widget>
      <widget class="QComboBox" name="rigth_type_cbox">
       <property name="enabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="geometry">
        <rect>
@@ -614,25 +614,12 @@
        <string>Remove</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_5">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>50</y>
-        <width>101</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Register Number</string>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="personal_id_edit">
       <property name="geometry">
        <rect>
         <x>160</x>
         <y>49</y>
-        <width>151</width>
+        <width>450</width>
         <height>20</height>
        </rect>
       </property>
@@ -640,8 +627,8 @@
      <widget class="QPushButton" name="search_person_button">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>47</y>
+        <x>640</x>
+        <y>70</y>
         <width>100</width>
         <height>23</height>
        </rect>
@@ -653,8 +640,8 @@
      <widget class="QPushButton" name="accept_person_button">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>78</y>
+        <x>640</x>
+        <y>95</y>
         <width>100</width>
         <height>23</height>
        </rect>
@@ -666,9 +653,9 @@
      <widget class="QLineEdit" name="accept_person_edit">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>80</y>
-        <width>261</width>
+        <x>160</x>
+        <y>97</y>
+        <width>450</width>
         <height>20</height>
        </rect>
       </property>
@@ -678,9 +665,58 @@
        <rect>
         <x>50</x>
         <y>20</y>
-        <width>379</width>
+        <width>561</width>
         <height>22</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="personal_name_edit">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>73</y>
+        <width>450</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_20">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>98</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Person Info</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_21">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>76</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Find Name</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="is_find_applicant_chbox">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>50</y>
+        <width>111</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Find Register</string>
       </property>
      </widget>
     </widget>
