--- a/view/PlanSettingsDialog.ui
+++ b/view/PlanSettingsDialog.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="base_settings_tab">
     <attribute name="title">
@@ -201,7 +201,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset>
      <normaloff>:/plugins/lm2/help_button.png</normaloff>:/plugins/lm2/help_button.png</iconset>
    </property>
   </widget>
