--- a/view/NavigatorWidget.ui
+++ b/view/NavigatorWidget.ui
@@ -72,7 +72,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-33</y>
+       <y>0</y>
        <width>419</width>
        <height>664</height>
       </rect>
@@ -93,7 +93,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>8</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
@@ -3383,6 +3383,11 @@ QPushButton:disabled {
         <item>
          <property name="text">
           <string>15.Court</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>16.Not active parcel</string>
          </property>
         </item>
        </widget>
