--- a/view/ApplicationsDialog.ui
+++ b/view/ApplicationsDialog.ui
@@ -63,7 +63,7 @@
     <string notr="true">QTabBar::tab { width: 150px; }</string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>9</number>
    </property>
    <property name="usesScrollButtons">
     <bool>true</bool>
@@ -1174,7 +1174,7 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>751</width>
+       <width>771</width>
        <height>381</height>
       </rect>
      </property>
@@ -1184,8 +1184,8 @@
      <widget class="QPushButton" name="mortgagee_remove_button">
       <property name="geometry">
        <rect>
-        <x>600</x>
-        <y>340</y>
+        <x>620</x>
+        <y>350</y>
         <width>141</width>
         <height>23</height>
        </rect>
@@ -1197,8 +1197,8 @@
      <widget class="QDateEdit" name="mortgage_start_date_edit">
       <property name="geometry">
        <rect>
-        <x>141</x>
-        <y>37</y>
+        <x>200</x>
+        <y>22</y>
         <width>110</width>
         <height>24</height>
        </rect>
@@ -1213,8 +1213,8 @@
      <widget class="QDateEdit" name="mortgage_end_date_edit">
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>40</y>
+        <x>200</x>
+        <y>50</y>
         <width>110</width>
         <height>24</height>
        </rect>
@@ -1229,75 +1229,242 @@
      <widget class="QLabel" name="label_40">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>41</y>
-        <width>101</width>
-        <height>16</height>
+        <x>67</x>
+        <y>24</y>
+        <width>124</width>
+        <height>17</height>
        </rect>
       </property>
       <property name="text">
-       <string>Mortgage start</string>
+       <string>Барьцаалсан огноо</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_41">
       <property name="geometry">
        <rect>
-        <x>270</x>
-        <y>40</y>
-        <width>101</width>
-        <height>16</height>
+        <x>100</x>
+        <y>52</y>
+        <width>90</width>
+        <height>17</height>
        </rect>
       </property>
       <property name="text">
-       <string>Mortgage end</string>
+       <string>Дуусах огноо</string>
       </property>
      </widget>
      <widget class="QComboBox" name="mortgage_type_cbox">
       <property name="geometry">
        <rect>
-        <x>574</x>
-        <y>38</y>
-        <width>141</width>
-        <height>26</height>
+        <x>450</x>
+        <y>22</y>
+        <width>313</width>
+        <height>22</height>
        </rect>
       </property>
      </widget>
      <widget class="QLabel" name="label_42">
       <property name="geometry">
        <rect>
-        <x>504</x>
-        <y>43</y>
-        <width>61</width>
-        <height>16</height>
+        <x>327</x>
+        <y>24</y>
+        <width>114</width>
+        <height>17</height>
        </rect>
       </property>
       <property name="text">
-       <string>Type</string>
+       <string>Барьцааны төрөл</string>
       </property>
      </widget>
      <widget class="QComboBox" name="mortgage_status_cbox">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>77</y>
-        <width>193</width>
-        <height>22</height>
+        <x>450</x>
+        <y>50</y>
+        <width>311</width>
+        <height>23</height>
        </rect>
       </property>
      </widget>
      <widget class="QLabel" name="label_46">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>80</y>
-        <width>94</width>
-        <height>16</height>
+        <x>401</x>
+        <y>53</y>
+        <width>39</width>
+        <height>17</height>
        </rect>
       </property>
       <property name="text">
-       <string>Mortgage Status</string>
+       <string>Төлөв</string>
       </property>
      </widget>
+     <widget class="QTableWidget" name="mortgage_twidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>150</y>
+        <width>751</width>
+        <height>192</height>
+       </rect>
+      </property>
+      <property name="acceptDrops">
+       <bool>true</bool>
+      </property>
+      <property name="dragEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="dragDropMode">
+       <enum>QAbstractItemView::InternalMove</enum>
+      </property>
+      <property name="defaultDropAction">
+       <enum>Qt::MoveAction</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>44</number>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>30</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>25</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Share (0.0-1.0)</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Person/Company ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Surname/Company</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>First Name</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QLabel" name="label_35">
+      <property name="geometry">
+       <rect>
+        <x>27</x>
+        <y>111</y>
+        <width>164</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Зээлийн гэрээний дугаар</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="mortgage_contract_no_edit">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>83</y>
+        <width>113</width>
+        <height>23</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>85</y>
+        <width>181</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Барьцааны гэрээний дугаар</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="loan_contract_no_edit">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>110</y>
+        <width>113</width>
+        <height>23</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_48">
+      <property name="geometry">
+       <rect>
+        <x>341</x>
+        <y>86</y>
+        <width>99</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Мөнгөний нэгж</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="mortgage_unit_type_cbox">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>83</y>
+        <width>311</width>
+        <height>23</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_36">
+      <property name="geometry">
+       <rect>
+        <x>344</x>
+        <y>111</y>
+        <width>97</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Барьцааны дүн</string>
+      </property>
+     </widget>
+     <widget class="QDoubleSpinBox" name="mortgage_unit_value_sbox">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>110</y>
+        <width>151</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="maximum">
+       <double>999999999.000000000000000</double>
+      </property>
+     </widget>
+     <zorder>label_41</zorder>
+     <zorder>mortgagee_remove_button</zorder>
+     <zorder>mortgage_start_date_edit</zorder>
+     <zorder>mortgage_end_date_edit</zorder>
+     <zorder>label_40</zorder>
+     <zorder>mortgage_type_cbox</zorder>
+     <zorder>label_42</zorder>
+     <zorder>mortgage_status_cbox</zorder>
+     <zorder>label_46</zorder>
+     <zorder>mortgage_twidget</zorder>
+     <zorder>label_35</zorder>
+     <zorder>mortgage_contract_no_edit</zorder>
+     <zorder>label_6</zorder>
+     <zorder>loan_contract_no_edit</zorder>
+     <zorder>label_48</zorder>
+     <zorder>mortgage_unit_type_cbox</zorder>
+     <zorder>label_36</zorder>
+     <zorder>mortgage_unit_value_sbox</zorder>
     </widget>
    </widget>
    <widget class="QWidget" name="cancel_contract_tab">
@@ -1578,7 +1745,7 @@
        <rect>
         <x>30</x>
         <y>200</y>
-        <width>451</width>
+        <width>391</width>
         <height>16</height>
        </rect>
       </property>
@@ -1591,7 +1758,7 @@
        <rect>
         <x>30</x>
         <y>220</y>
-        <width>361</width>
+        <width>390</width>
         <height>22</height>
        </rect>
       </property>
@@ -1652,6 +1819,29 @@
       </property>
       <property name="calendarPopup">
        <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_49">
+      <property name="geometry">
+       <rect>
+        <x>436</x>
+        <y>200</y>
+        <width>130</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Шийдвэрийн дугаар</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="contract_court_decision_no_edit">
+      <property name="geometry">
+       <rect>
+        <x>436</x>
+        <y>220</y>
+        <width>221</width>
+        <height>23</height>
+       </rect>
       </property>
      </widget>
     </widget>
@@ -1755,7 +1945,7 @@
        <rect>
         <x>30</x>
         <y>220</y>
-        <width>361</width>
+        <width>390</width>
         <height>22</height>
        </rect>
       </property>
@@ -1829,6 +2019,29 @@
       </property>
       <property name="calendarPopup">
        <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="record_court_decision_no_edit">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>220</y>
+        <width>221</width>
+        <height>23</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_50">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>200</y>
+        <width>130</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Шийдвэрийн дугаар</string>
       </property>
      </widget>
     </widget>
