--- a/view/NavigatorWidget.ui
+++ b/view/NavigatorWidget.ui
@@ -93,7 +93,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
@@ -460,10 +460,10 @@
         <widget class="QGroupBox" name="groupBox_2">
          <property name="geometry">
           <rect>
-           <x>174</x>
-           <y>120</y>
+           <x>170</x>
+           <y>110</y>
            <width>192</width>
-           <height>301</height>
+           <height>321</height>
           </rect>
          </property>
          <property name="font">
@@ -630,13 +630,26 @@
            <string>Газрын нэгдмэл сан</string>
           </property>
          </widget>
+         <widget class="QPushButton" name="public_parcel_button">
+          <property name="geometry">
+           <rect>
+            <x>16</x>
+            <y>290</y>
+            <width>161</width>
+            <height>23</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Нийтийн эзэмшил</string>
+          </property>
+         </widget>
         </widget>
        </widget>
        <widget class="QGroupBox" name="groupBox_6">
         <property name="geometry">
          <rect>
           <x>5</x>
-          <y>430</y>
+          <y>450</y>
           <width>371</width>
           <height>82</height>
          </rect>
