--- a/view/ContractDialog.ui
+++ b/view/ContractDialog.ui
@@ -533,9 +533,9 @@
         </property>
         <property name="geometry">
          <rect>
-          <x>460</x>
+          <x>400</x>
           <y>15</y>
-          <width>221</width>
+          <width>171</width>
           <height>20</height>
          </rect>
         </property>
@@ -546,9 +546,9 @@
         </property>
         <property name="geometry">
          <rect>
-          <x>230</x>
+          <x>90</x>
           <y>15</y>
-          <width>221</width>
+          <width>301</width>
           <height>20</height>
          </rect>
         </property>
@@ -557,21 +557,21 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>16</y>
-          <width>211</width>
+          <y>14</y>
+          <width>77</width>
           <height>17</height>
          </rect>
         </property>
         <property name="text">
-         <string>Edit address</string>
+         <string>Хаяг засах</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_13">
         <property name="geometry">
          <rect>
-          <x>460</x>
+          <x>400</x>
           <y>0</y>
-          <width>222</width>
+          <width>171</width>
           <height>16</height>
          </rect>
         </property>
@@ -582,7 +582,7 @@
        <widget class="QLabel" name="label_12">
         <property name="geometry">
          <rect>
-          <x>230</x>
+          <x>90</x>
           <y>0</y>
           <width>222</width>
           <height>16</height>
@@ -657,6 +657,49 @@
         </property>
         <property name="text">
          <string>+</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="street_buffer_button">
+        <property name="geometry">
+         <rect>
+          <x>640</x>
+          <y>14</y>
+          <width>22</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/plugins/lm2/refresh.png</normaloff>:/plugins/lm2/refresh.png</iconset>
+        </property>
+       </widget>
+       <widget class="QSpinBox" name="street_buffer_sbox">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>14</y>
+          <width>51</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="value">
+         <number>3</number>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_36">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>0</y>
+          <width>177</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Ойрчмийн харуулах гудамжны тоо</string>
         </property>
        </widget>
       </widget>
@@ -2244,7 +2287,9 @@
   <tabstop>print_certificate_button</tabstop>
   <tabstop>print_soil_qual_pass_edit</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
  <buttongroups>
   <buttongroup name="cancellation_reason_groupbox"/>
