--- a/view/CreateCaseDialog.ui
+++ b/view/CreateCaseDialog.ui
@@ -669,47 +669,17 @@
     <attribute name="title">
      <string>Гудамжны өөрчлөлт</string>
     </attribute>
-    <widget class="QTableWidget" name="street_twidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>40</y>
-       <width>771</width>
-       <height>161</height>
-      </rect>
-     </property>
-     <column>
-      <property name="text">
-       <string>Гудамжны нэр</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Дугаар</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Шийдвэрийн дугаар</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>New Column</string>
-      </property>
-     </column>
-    </widget>
     <widget class="QPushButton" name="street_find_button">
      <property name="geometry">
       <rect>
-       <x>710</x>
-       <y>10</y>
+       <x>707</x>
+       <y>3</y>
        <width>75</width>
        <height>23</height>
       </rect>
      </property>
      <property name="text">
-      <string>Load</string>
+      <string>Хайх</string>
      </property>
     </widget>
     <widget class="QTableWidget" name="touches_road_twidget">
@@ -742,7 +712,7 @@
       </property>
      </column>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="join_road_button">
      <property name="geometry">
       <rect>
        <x>380</x>
@@ -759,7 +729,7 @@
        <normaloff>:/plugins/lm2/double_right_button.png</normaloff>:/plugins/lm2/double_right_button.png</iconset>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="remove_road_button">
      <property name="geometry">
       <rect>
        <x>380</x>
@@ -810,13 +780,111 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>240</y>
+       <y>246</y>
        <width>121</width>
        <height>17</height>
       </rect>
      </property>
      <property name="text">
       <string>Бүгд</string>
+     </property>
+    </widget>
+    <widget class="QTreeWidget" name="street_treewidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>771</width>
+       <height>211</height>
+      </rect>
+     </property>
+     <property name="headerHidden">
+      <bool>true</bool>
+     </property>
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>
+     <attribute name="headerDefaultSectionSize">
+      <number>50</number>
+     </attribute>
+     <attribute name="headerStretchLastSection">
+      <bool>false</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>9</y>
+       <width>55</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Баг/Хороо:</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>4</y>
+       <width>211</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>9</y>
+       <width>77</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Гудамжны нэр:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>390</x>
+       <y>5</y>
+       <width>264</width>
+       <height>20</height>
+      </rect>
      </property>
     </widget>
    </widget>
