--- a/view/CreateCaseDialog.ui
+++ b/view/CreateCaseDialog.ui
@@ -113,7 +113,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>530</y>
+     <y>520</y>
      <width>341</width>
      <height>16</height>
     </rect>
@@ -854,7 +854,7 @@
       <string>Баг/Хороо:</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="comboBox">
+    <widget class="QComboBox" name="find_au3_cbox">
      <property name="geometry">
       <rect>
        <x>70</x>
@@ -877,7 +877,7 @@
       <string>Гудамжны нэр:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="find_street_name_edit">
      <property name="geometry">
       <rect>
        <x>390</x>
