--- a/view/CreateCaseDialog.ui
+++ b/view/CreateCaseDialog.ui
@@ -132,7 +132,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -885,6 +885,23 @@
        <width>264</width>
        <height>20</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="select_road_button">
+     <property name="geometry">
+      <rect>
+       <x>380</x>
+       <y>400</y>
+       <width>31</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resources.qrc">
+       <normaloff>:/plugins/lm2/parcel.gif</normaloff>:/plugins/lm2/parcel.gif</iconset>
      </property>
     </widget>
    </widget>
