--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -216,7 +216,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
+          <y>50</y>
           <width>281</width>
           <height>23</height>
          </rect>
@@ -229,7 +229,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>80</y>
+          <y>110</y>
           <width>441</width>
           <height>20</height>
          </rect>
@@ -239,7 +239,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>63</y>
+          <y>93</y>
           <width>74</width>
           <height>13</height>
          </rect>
@@ -252,7 +252,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>180</y>
+          <y>210</y>
           <width>441</width>
           <height>20</height>
          </rect>
@@ -262,7 +262,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>163</y>
+          <y>193</y>
           <width>85</width>
           <height>13</height>
          </rect>
@@ -275,7 +275,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>111</y>
+          <y>141</y>
           <width>74</width>
           <height>13</height>
          </rect>
@@ -288,7 +288,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>130</y>
+          <y>160</y>
           <width>387</width>
           <height>22</height>
          </rect>
@@ -298,10 +298,33 @@
         <property name="geometry">
          <rect>
           <x>403</x>
-          <y>130</y>
+          <y>160</y>
           <width>48</width>
           <height>22</height>
          </rect>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="layer_type_cbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>20</y>
+          <width>281</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="get_address_button">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>280</y>
+          <width>281</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Хаяг авах</string>
         </property>
        </widget>
       </widget>
